# aws-agencore-demo

./: .gitignore  CLAUDE.md  INITIAL_PROMPT.md  Makefile  README.md  build_kb.py  config.example.py  corpus_fetch.py  pyproject.toml  teardown.py
.github/workflows/: ci.yml
src/agentcore_demo/: __init__.py  agent.py  app.py  aws.py  backend.py  cost.py  fakes.py  pricing.py  questions.py  run.py
src/agentcore_demo/static/: index.html
tests/: conftest.py  test_agent.py  test_app.py  test_cost.py
