[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-agentcore-demo"
version = "0.1.0"
description = "Inside the Lines -- a live demo of biomedical-research agents inside a secure boundary on AWS Bedrock + AgentCore."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",
    "bedrock-agentcore>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff.lint.isort]
known-first-party = ["agentcore_demo", "config", "conftest"]
